Fix CTA list alignment

--- a/source/sass/components/@health/_health-lists.scss
+++ b/source/sass/components/@health/_health-lists.scss
@@ -116,3 +116,9 @@ ul {
     }
   }
 }
+
+// Fix aligment of CTA in a list
+// Markup <ul><li><a href="#" class="au-cta-link">Link</a></li></ul>
+ul:has(.au-cta-link) {
+  padding-left: 20px;
+}
